eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: simple-bank-api-deployment
 labels:
   app: simple-bank-api
spec:
 replicas: 1
 selector:
   matchLabels:
     app: simple-bank-api
 template:
   metadata:
     labels:
       app: simple-bank-api
   spec:
     containers:
     - name: simple-bank-api
       image: 932817181936.dkr.ecr.ap-southeast-1.amazonaws.com/simplebank:latest
       ports:
        - containerPort: 8000
